# computer-use-agent

computer-use-agent/: .gitignore  CLAUDE.md  agent.py  config.py  helpers.py  llm.py  pyproject.toml  requirements.txt  safety.md  safety.py  shell.py  tools.py
