[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "computer-use-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai",
    "rich",
    "python-dotenv",
]

[project.scripts]
agent = "agent:main"

[tool.setuptools.packages.find]
where = ["."]
