[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "computer-use-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai",
    "python-dotenv",
]

[project.scripts]
agent = "agent:cli"

[tool.setuptools.packages.find]
where = ["."]
